<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GraphDisplayActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/gray_200"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <ImageView
                    android:id="@+id/icon_type"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/thermometer"
                    android:contentDescription="TODO" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/proper_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/topic_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp" />
                </LinearLayout>
            </LinearLayout>



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/start_date_info"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/timeFromMeasurements" />

                    <TextView
                        android:id="@+id/time_from"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />

                    <Button
                        android:id="@+id/set_time_from"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/setTimeRange" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/end_date_info"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/timeToMeasurements" />

                    <TextView
                        android:id="@+id/time_to"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />

                    <Button
                        android:id="@+id/set_time_to"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/setTimeRange" />
                </LinearLayout>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"/>


            <Button
                android:id="@+id/load_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loadData" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/disp_avg_desc"
                        style="@style/desc_statistic"
                        android:text="@string/statisticAverage" />

                    <TextView
                        android:id="@+id/disp_std_desc"
                        style="@style/desc_statistic"
                        android:text="@string/statisticDeviation" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/average_value"
                        style="@style/value_statistic"/>

                    <TextView
                        android:id="@+id/standar_deviation"
                        style="@style/value_statistic" />
                </LinearLayout>

                <View
                    android:id="@+id/view4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/disp_min_desc"
                        style="@style/desc_statistic"
                        android:text="@string/statisticMin" />

                    <TextView
                        android:id="@+id/disp_max_desc"
                        style="@style/desc_statistic"
                        android:text="@string/statisticMax" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/minimal_value"
                        style="@style/value_statistic"/>


                    <TextView
                        android:id="@+id/maximal_value"
                        style="@style/value_statistic"/>
                </LinearLayout>

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/count_desc"
                        style="@style/value_statistic"
                        android:text="@string/statisticCountSample" />

                    <TextView
                        android:id="@+id/count_value"
                        style="@style/value_statistic" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="10dp"
                android:orientation="horizontal">

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/graph"
                    android:layout_width="match_parent"
                    android:layout_height="400dip" />
            </LinearLayout>

            <View
                android:id="@+id/view11"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/white" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>